src/test/deca/context/valid/intx.deca
// Description:
//    Programme definissant la variable entière x.
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

{
    boolean x = 4 < 4+5;
}