src/test/deca/context/invalid/compare_op_mismatch_02.deca
// Description:
//     Operation compare avec des mauvais types.
//
// Resultats:
//    Ligne 11: Compare operation type mismatch
//
// Historique:
//    cree le 01/01/2023

{
   boolean x = false < true;
}
